# iobuf

./: CMakeLists.txt
cmake/: linux.cmake  platform.cmake
include/: iobuf.h.in
src/: CMakeLists.txt  iobuf.c
src/cmake/: platform.cmake
